--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "name": "Heliactyl",
+    "name": "chunkdash",
   "pterodactyl": {
     "domain": "https://panel.example.com",
     "key": "Your Pterodactyl API key with all permissions"
@@ -54,7 +54,7 @@
       },
       "passwordgenerator": {
         "signup": true,
-        "note": "Use this to disable registering on Heliactyl.",
+        "note": "Use this to disable registering on ChunkDash.",
         "length": 16
       },
       "allow": {
@@ -68,7 +68,7 @@
         "overresourcessuspend": false
       },
       "oauth2": {
-        "_comment": "Go to https://discord.dev/ and create an application to set up OAuth2. This is required for Heliactyl to work. You must also set the redirect URL to the link below.",
+        "_comment": "Go to https://discord.dev/ and create an application to set up OAuth2. This is required for ChunkDash to work. You must also set the redirect URL to the link below.",
         "id": "Your client ID",
         "secret": "Your client secret",
         "link": "http://localhost:3000",
@@ -107,7 +107,7 @@
           "note": "This allows you to set a different plan/package to people who have a specific role however this requires the Discord bot to be configured and functioning. This is mainly used for Boost rewards.",
           "roleServer": "Discord Server ID",
           "roles": {
-            "Discord Role ID": "Heliactyl package name"
+            "Discord Role ID": "ChunkDash package name"
           }
         }
       },
@@ -199,7 +199,7 @@
       }
     },
     "afk": {
-      "_note": "This is the 2nd-generation version of Heliactyl's AFK system. Please report any bugs on the GitHub (github.com/heliactyloss/heliactyl). Thank you.",
+      "_note": "This is the 2nd-generation version of ChunkDash's AFK system. Please report any bugs on the GitHub (github.com/ChunkDashoss/ChunkDash). Thank you.",
       "path": "ws",
       "every": 60,
       "coins": 1,
@@ -207,7 +207,7 @@
     }
   },
   "antivpn": {
-    "note": "For this to work, generate an API Key on https://proxycheck.io/. If you do not put a key, Heliactyl will automatically disable anti-VPN.",
+    "note": "For this to work, generate an API Key on https://proxycheck.io/. If you do not put a key, ChunkDash will automatically disable anti-VPN.",
     "status": false,
     "APIKey": "Proxycheck API Key",
     "whitelistedIPs": [
@@ -215,14 +215,14 @@
     ]
   },
   "whitelist": {
-    "note": "This allows only specific people to be able to login to the Heliactyl dashboard. This does not affect your Panel.",
+    "note": "This allows only specific people to be able to login to the ChunkDash dashboard. This does not affect your Panel.",
     "status": false,
     "users": [
       "User ID"
     ]
   },
   "logging": {
-    "_note": "This is the 2nd-generation version of Heliactyl's logging system. Please report any bugs on the GitHub (github.com/heliactyloss/heliactyl). Thank you.",
+    "_note": "This is the 2nd-generation version of ChunkDash's logging system. Please report any bugs on the GitHub (github.com/ChunkDashoss/ChunkDash). Thank you.",
     "status": false,
     "webhook": "Webhook URL",
     "actions": {
