--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "heliactyl",
+  "name": "ChunkDash",
   "version": "14.11.0",
-  "description": "The official Heliactyl client area for the Pterodactyl Panel.",
+  "description": "The official ChunkDash client area for the Pterodactyl Panel.",
   "main": "app.js",
   "author": "Matt James",
   "dependencies": {
